--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
 
     color: #333;
-
+    background: #1e1f24;
     text-align: center;
     font-family: "Arial";
     font-size: 26px;
@@ -12,12 +12,18 @@ body
 
 #cabecera
 {
-    background: #33A;
+    background: #37488b;
     box-shadow: 0px 2px 20px 0px rgb(0, 0, 0, 0.5);
     color: white;
     margin: 0;
     padding: 0.5em;
     font-weight: bold;
+}
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline
@@ -39,4 +45,10 @@ body
 {
     font-size: 30px;
 
+}
+
+#post
+{
+    background: white;
+    padding: 1em;
 }
