--- a/css/estilos.css
+++ b/css/estilos.css
@@ -40,3 +40,11 @@ body
     font-size: 30px;
 
 }
+
+#footer
+{
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+}
